--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,24 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" routerLink="/">Portal</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+    <ul class="navbar-nav mr-auto" (click)="setActive()">
+      <li class="nav-item" [ngClass]="{'active':active === 0}">
         <a class="nav-link" routerLink="/">Inicio<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
+      </li> 
+      <li class="nav-item" [ngClass]="{'active':active === 1}">
         <a class="nav-link" routerLink="/seleccion">Seleccion</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" [ngClass]="{'active':active === 2}">
         <a class="nav-link" routerLink="/horario-prematricula">Horario Prematricula</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item " [ngClass]="{'active':active === 3}">
         <a class="nav-link" routerLink="/calificaciones">Calificaciones</a>
       </li>
-      <li class="nav-item dropdown">
+      <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" routerLink="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
         </a>
@@ -28,11 +28,11 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" routerLink="#">Something else here</a>
         </div>
-      </li>
+      </li> -->
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Matricula" aria-label="Search" #inputMatricula>
-      <div class="btn btn-outline-success my-2 my-sm-0" (click)="setM(inputMatricula.value)" >Buscar</div>
+    <form class="form-inline my-2 my-lg-0" >
+      <input class="form-control mr-sm-2" placeholder="Matricula" (keydown.enter)="setM(inputMatricula.value)" #inputMatricula  >
+      <div class="btn btn-outline-success my-2 my-sm-0" (click)="setM(inputMatricula.value)"  >Buscar</div>
     </form>
   </div>
 </nav>
