--- a/src/app/components/persona-data/persona-data.component.html
+++ b/src/app/components/persona-data/persona-data.component.html
@@ -1,4 +1,8 @@
-<div class="content">
+<br>
+<div class="">
+  <div class="row">
+    <div class="col-1"></div>
+    <div class="col-10 content">
   <div class="row">
     <div class="col">
       <h3>{{estudiante[0].NOMBRES +" "+ estudiante[0].APELLIDOS}}</h3>
@@ -18,4 +22,7 @@
     <div class="col"><h5>Indice General :  {{estudiante[0].INDICE_GEN}}</h5>   </div>
     <div class="col"><h5>Balance en Caja :  {{balance[0].Balance}}</h5>   </div>
   </div>
+</div>
+<div class="col-1"></div>
+</div>
 </div>
