Calificaciones corregidas y mejoradas

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,3 +4,7 @@ img.desaturada { filter: grayscale(100%);
     -ms-filter: grayscale(100%);
     -o-filter: grayscale(100%);
     }
+.logo{
+    height: 60px;
+    width: 60px;
+}
