--- a/src/app/components/calificaciones/calificaciones.component.html
+++ b/src/app/components/calificaciones/calificaciones.component.html
@@ -10,7 +10,7 @@
       <div class="col-3"></div>
     </div>
   </div>
-    <div class="row">
+    <div class="row" *ngIf="visible">
       <div class="col-3"></div>
       <div class="col-6"><br>
         <table class="table table-borderless table-striped table-dark">
@@ -27,6 +27,9 @@
               </tr>
             </tbody>
           </table>
+          <div class="cuadro">
+            <p><b>Indice Cuatrimestral: </b>{{calificaciones[0].INDICE_CUAT}}</p>
+          </div>
       </div>
       <div class="col-3"></div>
     </div>
