--- a/src/app/components/asignaturas/asignaturas.component.css
+++ b/src/app/components/asignaturas/asignaturas.component.css
@@ -1,5 +1,5 @@
 td:active{
-    background-color: rgba(0, 0, 0, 0.513);
+    background-color: #00000083;
 }
 .table-wrapper-scroll-y {
     display: block;
