--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,10 @@
       <li class="nav-item" [ngClass]="{'active':active === 2}">
         <a class="nav-link" routerLink="/horario-prematricula">Horario Prematricula</a>
       </li>
-      <li class="nav-item " [ngClass]="{'active':active === 3}">
+      <li class="nav-item" [ngClass]="{'active':active === 3}">
+        <a class="nav-link" routerLink="/horario">Horario</a>
+      </li>
+      <li class="nav-item " [ngClass]="{'active':active === 4}">
         <a class="nav-link" routerLink="/calificaciones">Calificaciones</a>
       </li>
       <!-- <li class="nav-item dropdown">
