--- a/src/app/components/horario/horario.component.html
+++ b/src/app/components/horario/horario.component.html
@@ -1,3 +1,24 @@
-<p>
-  horario works!
-</p>
+<div class="row">
+  <div class="col">
+    <br>
+      <table class="table table-borderless table-striped table-dark">
+          <thead>
+            <tr>
+              <th scope="col">Codigo</th>
+              <th scope="col">Nombre</th>
+              <th scope="col">Horario</th>
+              <th scope="col">Estado</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of horario">
+              <td>{{item.CRS_CDE}}</td>
+              <td>{{item.CRS_TITLE}}</td>
+              <td>{{item.HORARIO}}</td>
+              <td>{{item.TRANSACTION_STS}}</td>
+            </tr>
+          </tbody>
+        </table>
+
+  </div>
+</div>
