--- a/src/app/components/horario/horario.component.html
+++ b/src/app/components/horario/horario.component.html
@@ -14,8 +14,8 @@
             <tr *ngFor="let item of horario">
               <td>{{item.CRS_CDE}}</td>
               <td>{{item.CRS_TITLE}}</td>
-              <td>{{item.HORARIO}}</td>
-              <td>{{item.TRANSACTION_STS}}</td>
+              <td>{{item.hora}}</td>
+              <td>{{item.ESTADO_ASIG}}</td>
             </tr>
           </tbody>
         </table>
