--- a/src/app/components/asignaturas/asignaturas.component.html
+++ b/src/app/components/asignaturas/asignaturas.component.html
@@ -37,14 +37,14 @@
               </div>
             <table class="table table-borderless table-striped table-dark table-wrapper-scroll-y">
               <tbody>
-                <tr *ngFor="let item of secciones">
-                  <td>{{item.CRS_CDE}}</td>
-                  <td>{{item.CRS_TITLE}}</td>
-                  <td>{{item.CAPACIDAD}}</td>
-                  <td>{{item.CRS_ENROLLMENT}}</td>
-                  <td>{{item.PROFESOR}}</td>
-                  <td>{{item.HORARIO}}</td>
-                  <td><a href="">Agregar</a></td>
+                <tr *ngFor="let items of secciones">
+                  <td>{{items.CRS_CDE}}</td>
+                  <td>{{items.CRS_TITLE}}</td>
+                  <td>{{items.CAPACIDAD}}</td>
+                  <td>{{items.CRS_ENROLLMENT}}</td>
+                  <td>{{items.PROFESOR}}</td>
+                  <td>{{items.HORARIO}}</td>
+                  <td><div class="btn btn-primary" (click)="postAsignatura(items,'P')">Agregar</div><span style="margin-left: 15px;" (click)="addCart(items)"><i class="fas fa-cart-plus"></i></span></td>
                 </tr>
               </tbody>
             </table>
@@ -74,7 +74,7 @@
                 <td>{{item.CRS_ENROLLMENT}}</td>
                 <td>{{item.PROFESOR}}</td>
                 <td>{{item.HORARIO}}</td>
-                <td><a href="">Agregar</a></td>
+                <td><div class="btn btn-primary" (click)="postAsignatura(item,'P')">Agregar</div><span style="margin-left: 15px;" (click)="addCart(items)"><i class="fas fa-cart-plus"></i></span></td>
               </tr>
             </tbody>
           </table>
@@ -109,7 +109,7 @@
             <td>{{item.TRANSACTION_STS}}</td>
             <td>{{item.HORARIO}}</td>
             <td>{{item.CREDIT_HRS}}</td>
-            <td><a href="">Eliminar</a></td>
+            <td><div class="btn btn-danger" (click)="postAsignatura(item,'D')">Eliminar</div></td>
           </tr>
         </tbody>
       </table>
